# simulador-de-MFU

./: CMakeLists.txt  COMPILACION_WINDOWS.md  DOCUMENTACION_TECNICA.md  MFUAlgorithm.cpp  MFUAlgorithm.h  MMU.cpp  MMU.h  Makefile  MemoryPage.h  PageTable.cpp  PageTable.h  QUICK_START.md  README.md  TLB.cpp  TLB.h  compilar_y_ejecutar.bat  main.cpp
